  Imager will accept this parameter and produce the same result.
- you can now supply a page parameter to read() to read a given page
  from a GIF file.
- reading a multi-image GIF was leaking memory (a line buffer per file)
- maxcolors now must be at least 1 when creating a paletted image.
- converted t/t022double.t to use Test::More
- t1 library re-initialization modified to support T1Lib 5.1.0
- setmask() now returns true on success and reports a missing mask
  parameter.
- double per sample images were ignoring the channel mask.
- converted t/t021sixteen.t to use Test::More
- 16-bit per sample images were ignoring the channel mask
- added t/t91pod.t
- expand Imager::ImageTypes:
  - make all methods into =items
  - document parameters
  - more examples
  - add AUTHOR/REVISION/SEE ALSO
- add samples/tk-photo.pl
- fixes to verbose mode in Makefile.PL, also added a -v switch so you 
  can enable it via the command-line
  Resolves: http://rt.cpan.org/NoAuth/Bug.html?id=16094
- arc(..., fill=> ...) wasn't handling concave areas correctly
- arc(..., color=>...) wasn't properly filling it's area
- added experimental antialiased support to arc()
- the order of the returned values for Imager::Font's align() method
  was incorrect.
- check the correct directory when adding the cygwin Win32 API include
  path (Makefile.PL).  This was a later response to #16094
  Resolves: http://rt.cpan.org/NoAuth/Bug.html?16094
- add --nolog command-line switch to Makefile.PL to disable logging
- filled polygons using a complex fill with combine != 0 (none) didn't
  correctly handle polygons that crossed a given scanline more than once.
- the straight edges of filled arcs weren't being drawn correctly, 
  causing minor artifacts at the inner and external corners

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
